Add docker file and fix bugs

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   data:
     cassandra:
       keyspace-name: user_connector
-      contact-points: 127.0.0.1
+      contact-points: ${CASSANDRA_CONTACT_POINT:127.0.0.1}
       port: 9042
       local-datacenter: datacenter1
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: ${KAFKA_HOST:localhost}:9092
 
