--- a/pom.xml
+++ b/pom.xml
@@ -16,13 +16,14 @@
 
 	<properties>
 		<java.version>11</java.version>
-		<assertj-core.version>3.20.2</assertj-core.version>
 		<org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
 		<lombok-mapstruct-binding.version>0.1.0</lombok-mapstruct-binding.version>
 
-		<wiremock-jre8.version>2.25.1</wiremock-jre8.version>
+		<cassandra.unit.version>4.3.1.0</cassandra.unit.version>
+		<hibernate-validator.version>7.0.1.Final</hibernate-validator.version>
 
-		<embedded-cassandra.version>4.0.8</embedded-cassandra.version>
+		<assertj-core.version>3.20.2</assertj-core.version>
+		<wiremock-jre8.version>2.25.1</wiremock-jre8.version>
 	</properties>
 
 	<dependencies>
@@ -75,16 +76,16 @@
 
 		<!-- CASSANDRA EMBEDDED -->
 		<dependency>
-			<groupId>com.github.nosan</groupId>
-			<artifactId>embedded-cassandra-spring-boot-starter</artifactId>
-			<version>${embedded-cassandra.version}</version>
+			<groupId>org.cassandraunit</groupId>
+			<artifactId>cassandra-unit</artifactId>
+			<version>${cassandra.unit.version}</version>
+			<scope>test</scope>
 		</dependency>
-
-<!--		<dependency>-->
-<!--			<groupId>com.github.nosan</groupId>-->
-<!--			<artifactId>embedded-cassandra</artifactId>-->
-<!--			<version>4.0.6</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>${hibernate-validator.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.github.tomakehurst</groupId>
